@@ -38,17 +38,6 @@ extern "C" {
 #include "types.h"
 #include "color.h"
 
-typedef struct _at_fitting_opts_type at_fitting_opts_type;
-typedef struct _at_input_opts_type   at_input_opts_type;
-typedef struct _at_output_opts_type  at_output_opts_type;
-typedef struct _at_bitmap            at_bitmap;
-typedef enum   _at_polynomial_degree at_polynomial_degree;
-typedef struct _at_spline_type       at_spline_type;
-typedef struct _at_spline_list_type  at_spline_list_type;
-typedef struct _at_spline_list_array_type at_spline_list_array_type;
-#define at_splines_type at_spline_list_array_type 
-typedef enum _at_msg_type at_msg_type;
-
 /* Third degree is the highest we deal with.  */
 enum _at_polynomial_degree
 {
@@ -61,6 +50,24 @@ enum _at_polynomial_degree
   /* not the real number of points to define a
      circle but to distinguish between a cubic spline */
 };
+
+enum _at_msg_type
+{
+  AT_MSG_NOT_SET = 0,		/* is used in autotrace internally */
+  AT_MSG_FATAL = 1,
+  AT_MSG_WARNING,
+};
+
+typedef struct _at_fitting_opts_type at_fitting_opts_type;
+typedef struct _at_input_opts_type   at_input_opts_type;
+typedef struct _at_output_opts_type  at_output_opts_type;
+typedef struct _at_bitmap            at_bitmap;
+typedef enum   _at_polynomial_degree at_polynomial_degree;
+typedef struct _at_spline_type       at_spline_type;
+typedef struct _at_spline_list_type  at_spline_list_type;
+typedef struct _at_spline_list_array_type at_spline_list_array_type;
+#define at_splines_type at_spline_list_array_type 
+typedef enum _at_msg_type at_msg_type;
 
 /* A Bezier spline can be represented as four points in the real plane:
    a starting point, ending point, and two control points.  The
@@ -220,13 +227,6 @@ struct _at_bitmap
   unsigned short width;
   unsigned char *bitmap;
   unsigned int np;
-};
-
-enum _at_msg_type
-{
-  AT_MSG_NOT_SET = 0,		/* is used in autotrace internally */
-  AT_MSG_FATAL = 1,
-  AT_MSG_WARNING,
 };
 
 typedef
